--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@
     100% {background: #5bc0de;transform: rotate(180deg)}
 }
 /* covertitle Component Styles */
-#covertitle {
+.covertitle {
     position: relative;
     max-height: 100%;
     color: white;
@@ -42,7 +42,7 @@
     overflow: hidden;
 }
 
-#covertitle h1 {
+.covertitle h1 {
     position: absolute;
     top: 50%;
     left: 5%;
@@ -51,7 +51,7 @@
     color: white;
 }
 
-#covertitle img {
+.covertitle img {
     width: 100%;
     z-index: -1;
 }
