--- a/main.css
+++ b/main.css
@@ -44,11 +44,11 @@
 
 .covertitle h1 {
     position: absolute;
-    top: 50%;
-    left: 5%;
     z-index: 10;
     font-size: 10vw;
     color: white;
+    top: 50%!important;
+    left: 5%!important;
 }
 
 .covertitle img {
